# stellar-merch-shop

./: .env.example  .gitignore  Cargo.toml  MAKEFILE  README.md  README_NFC.md  environments.toml  package-lock.json  package.json  vite.config.ts
.config/stellar/: stellar_merch_shop_testnet_id
Chimp/: Info.plist  PRIVACY_POLICY.md  XCODE_SETUP.md
Chimp/Chimp/: ChimpApp.swift  ContentView.swift  Extensions.swift  Logger.swift  ViewController.swift  WalletState.swift
Chimp/Chimp.xcodeproj/: project.pbxproj
Chimp/Chimp/Commands/: APDU.swift  BlockchainCommandHandler.swift  CommandHandler.swift
Chimp/Chimp/Config/: AppConfig.swift
Chimp/Chimp/Crypto/: CryptoUtils.swift  DERSignatureParser.swift
Chimp/Chimp/Errors/: AppError.swift
NFCBridge/NFCBridge/: Info.plist
NFCBridge/NFCBridge.xcodeproj/: project.pbxproj
NFCMerch/NFCMerch/: ContentView.swift  Info.plist
NFCMerch/NFCMerch.xcodeproj/: project.pbxproj
nfc-server/: index.js
nfc-server/lib/: blockchain-ops.js  constants.js  crypto-utils.js  ndef-ops.js  ndef-parser.js  nfc-manager.js
src/: App.tsx
src/components/: ChipProgressIndicator.tsx  ConfigurationSection.tsx  KeyInfoDisplay.tsx  KeyManagementSection.tsx  NDEFOperationsSection.tsx  NFCMintProduct.tsx  OperationProgress.tsx
src/contracts/: util.ts
src/hooks/: useChipAuth.ts  useContractClient.ts  useErrorHandler.ts  useNFC.ts  useOperationSteps.ts
src/pages/: Home.tsx
src/providers/: WalletProvider.tsx
src/types/: contract.ts
src/util/: chipErrorHandler.ts  crypto.ts  nfcClient.ts  storage.ts  wallet.ts
(+78 files in other folders)
